--- a/UserCenter/AdminCenter.html
+++ b/UserCenter/AdminCenter.html
@@ -12,28 +12,29 @@
 </head>
 
 <body>
+    <div class="container body-content">
 
-    <h2>负责人个人中心</h2>
-    <div class="bg">
-        <div class="row" style="padding-top: 10%;">
-            <div class="col-md-2 col-md-offset-5">
-                <div class="portrait"></div>
-                <h3 style="text-align: center;"><b>负责人</b></h3>
+        <div class="bg" style="background-image: url(../Images/bg7.jpg);">
+            <div class="row" style="padding-top: 10%;">
+                <div class="col-md-2 offset-md-5">
+                    <div class="portrait"></div>
+                    <h3 style="text-align: center;"><b>负责人</b></h3>
+                </div>
             </div>
-        </div>
-        <div class="row" style="padding-top: 5%;">
-            <div class="col-md-3 btn-square" style="margin-left: 37.5%;">
-                <h1>个人资料</h1>
+            <div class="row" style="padding-top: 5%;">
+                <div class="col-md-3 btn-square" style="margin-left: 37.5%;">
+                    <h1>个人资料</h1>
+                </div>
             </div>
-        </div>
-        <div class="row" style="padding-top: 5%;">
-            <div class="col-md-3 btn-square" style="margin-left: 37.5%;">
-                <h1>已派送订单</h1>
+            <div class="row" style="padding-top: 5%;">
+                <div class="col-md-3 btn-square" style="margin-left: 37.5%;">
+                    <h1>已派送订单</h1>
+                </div>
             </div>
-        </div>
-        <div class="row" style="padding: 5% 0;">
-            <div class="col-md-3 btn-square" style="margin-left: 37.5%;">
-                <h1>未派送订单</h1>
+            <div class="row" style="padding: 5% 0;">
+                <div class="col-md-3 btn-square" style="margin-left: 37.5%;">
+                    <h1>未派送订单</h1>
+                </div>
             </div>
         </div>
     </div>
