--- a/UserCenter/CellerCenter.html
+++ b/UserCenter/CellerCenter.html
@@ -9,16 +9,17 @@
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" integrity="sha384-WskhaSGFgHYWDcbwN70/dfYBj47jz9qbsMId/iRN3ewGhXQFZCSftd1LZCfmhktB" crossorigin="anonymous">
     <link rel="stylesheet" type="text/css" href="../css/MySite.css">
-    <title>UserCenter</title>
+    <title>Hello, world!</title>
 </head>
 
 <body>
     <div class="container body-content">
+
         <div class="bg" style="background-image: url(../Images/bg7.jpg);">
             <div class="row" style="padding-top: 10%;">
                 <div class="col-md-2 offset-md-5">
                     <div class="portrait"></div>
-                    <h3 style="text-align: center;"><b>用户名</b></h3>
+                    <h3 style="text-align: center;"><b>零售商</b></h3>
                 </div>
             </div>
             <div class="row" style="padding-top: 5%;">
@@ -26,10 +27,10 @@
                     <h1>个人资料</h1>
                 </div>
                 <div class="col-md-3 offset-md-2 btn-square">
-                    <h1>收货地址</h1>
+                    <h1>商品查看</h1>
                 </div>
             </div>
-            <div class="row" style="padding-top: 5%;">
+            <div class="row" style="padding-top: 5%; padding-bottom: 15%;">
                 <div class="col-md-3 offset-md-2 btn-square">
                     <h1>已派送订单</h1>
                 </div>
@@ -37,13 +38,9 @@
                     <h1>未派送订单</h1>
                 </div>
             </div>
-            <div class="row" style="padding: 5% 0;">
-                <div class="col-md-3 btn-square" style="margin-left: 37.5%;">
-                    <h1>购物车</h1>
-                </div>
-            </div>
         </div>
     </div>
+
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
@@ -51,4 +48,4 @@
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js" integrity="sha384-smHYKdLADwkXOn1EmN1qk/HfnUcbVRZyYmZ4qpPea6sjB/pTJ0euyQp0Mk8ck+5T" crossorigin="anonymous"></script>
 </body>
 
-</html>`
+</html>
