--- a/UserCenter/UserIndex.html
+++ b/UserCenter/UserIndex.html
@@ -6,31 +6,28 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sfrit</title>
-    <script src="../Sfruit/assets/js/vue.js"></script>
-    <script src="../Sfruit/assets/js/vue-router.js"></script>
-    <link rel="stylesheet" type="text/css" href="../Sfruit/css/layout.css">
+    <script src="../assets/js/vue.js"></script>
+    <script src="../assets/js/vue-router.js"></script>
+    <link rel="stylesheet" type="text/css" href="../css/layout.css">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" integrity="sha384-WskhaSGFgHYWDcbwN70/dfYBj47jz9qbsMId/iRN3ewGhXQFZCSftd1LZCfmhktB" crossorigin="anonymous">
 
 </head>
 
 <body>
     <!--顶部栏-->
-    <div class="container">
+    <div id="web" class="container">
         <div id="index_wrapper">
             <div class="cnt1" id="nav1">
                 <nav class="navbar justify-content-end">
                     <span id="span1">每日优选水果</span>
-                    <div class="btn-group pull-right" role="group" id="button_group">
-                        <button type="button" id="denglu" class="btn btn-default" role="button">登录</button>
-                        <button type="button" id="zhuce" class="btn btn-default" role="button">注册</button>
-                    </div>
+                    <img id="buyer" src="../Images/user.JPG" class="img-thumbnail float-right img-circle">
                 </nav>
                 <nav class="navbar justify-content-end">
                     <span id="span2">天天营养健康</span>
                     <form class="form-inline">
                         <div class="form-group navbar-right" id="search">
-                            <input id="searchFruit" class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
-                            <button id="submit" class="btn btn-default" id="sousuo" type="button">搜索</button>
+                            <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
+                            <button class="btn btn-default" id="sousuo" type="submit">搜索</button>
                         </div>
                     </form>
                 </nav>
@@ -43,7 +40,7 @@
                             <div id="bcshop" class="col-md-2 classify_title">商家</div>
                             <ul id="shopper" class="col-md-10 nav nav-pills classify_detail" role="tablist">
                                 <li class="col-md-3 nav-item" v-for="shop in shoppers" @click="choseShopper(shop)">
-                                    <a class="nav-link" font-size="0.8em">{{shop.name}}</a>
+                                    <a class="nav-link" font-size="0.8em" role="tab" data-toggle="tab" aria-controls="shooper1">{{shop.name}}</a>
                                 </li>
                             </ul>
                         </div>
@@ -95,7 +92,7 @@
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js" integrity="sha384-smHYKdLADwkXOn1EmN1qk/HfnUcbVRZyYmZ4qpPea6sjB/pTJ0euyQp0Mk8ck+5T" crossorigin="anonymous"></script>
-    <script src="../Sfruit/js/index.js"></script>
+    <script src="../js/userindex.js"></script>
 </body>
 
 </html>
