--- a/Orders/shoppintcart.html
+++ b/Orders/shoppintcart.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>shopping cart</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" integrity="sha384-WskhaSGFgHYWDcbwN70/dfYBj47jz9qbsMId/iRN3ewGhXQFZCSftd1LZCfmhktB" crossorigin="anonymous">
-    <link rel="stylesheet" type="text/css" href="../css/layout.css">
+    <link rel="stylesheet" type="text/css" href="../assets/css/layout.css">
 
 </head>
 
@@ -15,11 +15,11 @@
     <div class="wrapper">
         <div id="shoppingcart_wrapper">
             <div id="shoppingcart_top">
-                <span>主页</span>
+                <span id="index">主页</span>
                 <img src="../Images/arrow.png">
-                <span>个人中心</span>
+                <span id="usercenter">个人中心</span>
                 <img src="../Images/arrow.png">
-                <span>购物车</span>
+                <span id="shoppingcart">购物车</span>
             </div>
             <div id="shoppingcart_content">
                 <span id="notice">商品清单</span>
@@ -123,7 +123,7 @@
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js" integrity="sha384-smHYKdLADwkXOn1EmN1qk/HfnUcbVRZyYmZ4qpPea6sjB/pTJ0euyQp0Mk8ck+5T" crossorigin="anonymous"></script>
-    <script src="../Sfruit/js/index.js"></script>
+    <script src="../assets/js/index.js"></script>
 </body>
 
 </html>
