--- a/UserCenter/BuyerAddress.html
+++ b/UserCenter/BuyerAddress.html
@@ -1,13 +1,13 @@
-<!doctype html>
-<html lang="en">
+<!DOCTYPE html>
+<html>
 
 <head>
-    <!-- Required meta tags -->
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
     <!-- Bootstrap CSS -->
-    <link rel="stylesheet" type="text/css" href="../css/MySite.css">
+    <link rel="stylesheet" type="text/css" href="../assets/css/MySite.css">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" integrity="sha384-WskhaSGFgHYWDcbwN70/dfYBj47jz9qbsMId/iRN3ewGhXQFZCSftd1LZCfmhktB" crossorigin="anonymous">
 
     <title>Hello, world!</title>
@@ -15,12 +15,12 @@
 
 <body>
     <div class="container body-content">
-        <div class="bg" style="background-image: url(../../Image/8.jpg)">
+        <div class="bg" style="background-image: url(../Images/8.jpg)">
             <div class="row" style="padding-bottom: 5%;">
                 <div class="col-md-4 offset-md-1">
                     <ol class="breadcrumb">
-                        <li><a href="#">主页</a></li>
-                        <li><a href="#">个人中心</a></li>
+                        <li><a href="../index.html">主页</a></li>
+                        <li><a href="../UserCenter/BuyerCenter.html">个人中心</a></li>
                         <li class="active">收货地址</li>
                     </ol>
                 </div>
