--- a/UserCenter/BuyerCenter.html
+++ b/UserCenter/BuyerCenter.html
@@ -1,14 +1,14 @@
-<!doctype html>
-<html lang="en">
+<!DOCTYPE html>
+<html>
 
 <head>
-    <!-- Required meta tags -->
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" integrity="sha384-WskhaSGFgHYWDcbwN70/dfYBj47jz9qbsMId/iRN3ewGhXQFZCSftd1LZCfmhktB" crossorigin="anonymous">
-    <link rel="stylesheet" type="text/css" href="../css/MySite.css">
+    <link rel="stylesheet" type="text/css" href="../assets/css/MySite.css">
     <title>UserCenter</title>
 </head>
 
@@ -17,15 +17,15 @@
         <div class="bg" style="background-image: url(../Images/bg7.jpg);">
             <div class="row" style="padding-top: 10%;">
                 <div class="col-md-2 offset-md-5">
-                    <div class="portrait"></div>
+                    <div class="portrait" style="background-image: url(../Images/user.JPG);"></div>
                     <h3 style="text-align: center;"><b>用户名</b></h3>
                 </div>
             </div>
             <div class="row" style="padding-top: 5%;">
-                <div class="col-md-3 offset-md-2 btn-square">
+                <div id="BuyerInfo" class="col-md-3 offset-md-2 btn-square">
                     <h1>个人资料</h1>
                 </div>
-                <div class="col-md-3 offset-md-2 btn-square">
+                <div id="BuyerAddress" class="col-md-3 offset-md-2 btn-square">
                     <h1>收货地址</h1>
                 </div>
             </div>
@@ -38,7 +38,7 @@
                 </div>
             </div>
             <div class="row" style="padding: 5% 0;">
-                <div class="col-md-3 btn-square" style="margin-left: 37.5%;">
+                <div id="shoppingcart" class="col-md-3 btn-square" style="margin-left: 37.5%;">
                     <h1>购物车</h1>
                 </div>
             </div>
@@ -49,6 +49,7 @@
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js" integrity="sha384-smHYKdLADwkXOn1EmN1qk/HfnUcbVRZyYmZ4qpPea6sjB/pTJ0euyQp0Mk8ck+5T" crossorigin="anonymous"></script>
+    <script src="../assets/js/user.js"></script>
 </body>
 
 </html>`
