--- a/index.html
+++ b/index.html
@@ -8,21 +8,27 @@
     <title>Sfrit</title>
     <script src="../Sfruit/assets/js/vue.js"></script>
     <script src="../Sfruit/assets/js/vue-router.js"></script>
-    <link rel="stylesheet" type="text/css" href="../Sfruit/css/layout.css">
+    <link rel="stylesheet" type="text/css" href="../Sfruit/assets/css/layout.css">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" integrity="sha384-WskhaSGFgHYWDcbwN70/dfYBj47jz9qbsMId/iRN3ewGhXQFZCSftd1LZCfmhktB" crossorigin="anonymous">
-
 </head>
 
 <body>
     <!--顶部栏-->
-    <div class="container">
+    <div id="web" class="container">
         <div id="index_wrapper">
             <div class="cnt1" id="nav1">
                 <nav class="navbar justify-content-end">
                     <span id="span1">每日优选水果</span>
-                    <div class="btn-group pull-right" role="group" id="button_group">
-                        <button type="button" id="denglu" class="btn btn-default" role="button">登录</button>
-                        <button type="button" id="zhuce" class="btn btn-default" role="button">注册</button>
+                    <div id="denglumodel">
+                        <div v-if="isLogin == false" class="btn-group pull-right" role="group" id="button_group">
+                            <button type="button" id="denglu" class="btn btn-default" role="button">登录</button>
+                            <button type="button" id="zhuce" class="btn btn-default" role="button">注册</button>
+                        </div>
+                        <div v-else>
+                            <a href="../Sfruit/UserCenter/BuyerCenter.html">
+                                <img src="../Sfruit/Images/user.JPG" class="img-thumbnail">
+                            </a>
+                        </div>
                     </div>
                 </nav>
                 <nav class="navbar justify-content-end">
@@ -77,7 +83,7 @@
                     </div>
 
                     <div id="fruits" class="card-deck">
-                        <div class="card" v-for="fruit in fruits" @click="chosefruit(fruit)">
+                        <div id="fruit" class="card" v-for="fruit in fruits" @click="chosefruit(fruit)">
                             <img class="card-img-top" :src="fruit.src" lt="Card image cap">
                             <div class="card-body">
                                 <h5 class="card-title">{{fruit.name}}</h5>
@@ -95,7 +101,7 @@
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js" integrity="sha384-smHYKdLADwkXOn1EmN1qk/HfnUcbVRZyYmZ4qpPea6sjB/pTJ0euyQp0Mk8ck+5T" crossorigin="anonymous"></script>
-    <script src="../Sfruit/js/index.js"></script>
+    <script src="../Sfruit/assets/js/index.js"></script>
 </body>
 
 </html>
