--- a/UserCenter/BuyerAddress.html
+++ b/UserCenter/BuyerAddress.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" type="text/css" href="../assets/css/MySite.css">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" integrity="sha384-WskhaSGFgHYWDcbwN70/dfYBj47jz9qbsMId/iRN3ewGhXQFZCSftd1LZCfmhktB" crossorigin="anonymous">
 
-    <title>Hello, world!</title>
+    <title>地址管理</title>
 </head>
 
 <body>
@@ -47,7 +47,7 @@
                                         <span class="glyphicon glyphicon-check"></span>
                                     </div>
                                     <div class="col-sm-9">
-                                        <p style="font-size: 18px;">默认地址</p>
+                                        <p style="font-size: 1em;">默认地址</p>
                                     </div>
                                 </div>
                             </div>
@@ -57,7 +57,7 @@
                                         <span class="glyphicon glyphicon-pencil"></span>
                                     </div>
                                     <div class="col-sm-8">
-                                        <p style="font-size: 18px;">编辑</p>
+                                        <p style="font-size: 1em;">编辑</p>
                                     </div>
                                 </div>
                             </div>
@@ -67,7 +67,7 @@
                                         <span class="glyphicon glyphicon-trash"></span>
                                     </div>
                                     <div class="col-sm-8">
-                                        <p style="font-size: 18px;">删除</p>
+                                        <p style="font-size: 1em;">删除</p>
                                     </div>
                                 </div>
                             </div>
@@ -93,7 +93,7 @@
                                         <span class="glyphicon glyphicon-unchecked"></span>
                                     </div>
                                     <div class="col-sm-9">
-                                        <p style="font-size: 18px;">设为默认</p>
+                                        <p style="font-size: 1em;">设为默认</p>
                                     </div>
                                 </div>
                             </div>
@@ -103,7 +103,7 @@
                                         <span class="glyphicon glyphicon-pencil"></span>
                                     </div>
                                     <div class="col-sm-8">
-                                        <p style="font-size: 18px;">编辑</p>
+                                        <p style="font-size: 1em;">编辑</p>
                                     </div>
                                 </div>
                             </div>
@@ -113,7 +113,7 @@
                                         <span class="glyphicon glyphicon-trash"></span>
                                     </div>
                                     <div class="col-sm-8">
-                                        <p style="font-size: 18px;">删除</p>
+                                        <p style="font-size: 1em;">删除</p>
                                     </div>
                                 </div>
                             </div>
