--- a/UserCenter/AddAddress.html
+++ b/UserCenter/AddAddress.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="../css/MySite.css">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" integrity="sha384-WskhaSGFgHYWDcbwN70/dfYBj47jz9qbsMId/iRN3ewGhXQFZCSftd1LZCfmhktB" crossorigin="anonymous">
 
-    <title>Hello, world!</title>
+    <title>添加地址</title>
 </head>
 
 <body>
@@ -31,15 +31,15 @@
                 <div class="col-md-6 offset-md-1">
                     <form>
                         <div class="form-group">
-                            <label for="name" style="font-size: 18px;">联系人</label>
+                            <label for="name" style="font-size: 1em;">联系人</label>
                             <input type="text" class="form-control" id="name" placeholder="联系人">
                         </div>
                         <div class="form-group">
-                            <label for="phone" style="font-size: 18px;">手机号</label>
+                            <label for="phone" style="font-size: 1em;">手机号</label>
                             <input type="text" class="form-control" id="phone" placeholder="手机号">
                         </div>
                         <div class="form-group">
-                            <label for="address" style="font-size: 18px;">详细地址</label>
+                            <label for="address" style="font-size: 1em;">详细地址</label>
                             <input type="text" class="form-control" id="address" placeholder="详细地址">
                         </div>
                         <button type="submit" class="btn btn-default">确认</button>
