--- a/UserCenter/AdminCenter.html
+++ b/UserCenter/AdminCenter.html
@@ -7,8 +7,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" integrity="sha384-WskhaSGFgHYWDcbwN70/dfYBj47jz9qbsMId/iRN3ewGhXQFZCSftd1LZCfmhktB" crossorigin="anonymous">
-    <link rel="stylesheet" type="text/css" href="../css/MySite.css">
-    <title>AdminCenter</title>
+    <link rel="stylesheet" type="text/css" href="../assets/css/MySite.css">
+    <title>用户中心</title>
 </head>
 
 <body>
@@ -23,17 +23,17 @@
             </div>
             <div class="row" style="padding-top: 5%;">
                 <div class="col-md-3 btn-square" style="margin-left: 37.5%;">
-                    <h1>个人资料</h1>
+                    <h3>个人资料</h3>
                 </div>
             </div>
             <div class="row" style="padding-top: 5%;">
                 <div class="col-md-3 btn-square" style="margin-left: 37.5%;">
-                    <h1>已派送订单</h1>
+                    <h3>已派送订单</h3>
                 </div>
             </div>
             <div class="row" style="padding: 5% 0;">
                 <div class="col-md-3 btn-square" style="margin-left: 37.5%;">
-                    <h1>未派送订单</h1>
+                    <h3>未派送订单</h3>
                 </div>
             </div>
         </div>
