--- a/UserCenter/BuyerCenter.html
+++ b/UserCenter/BuyerCenter.html
@@ -9,7 +9,7 @@
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" integrity="sha384-WskhaSGFgHYWDcbwN70/dfYBj47jz9qbsMId/iRN3ewGhXQFZCSftd1LZCfmhktB" crossorigin="anonymous">
     <link rel="stylesheet" type="text/css" href="../assets/css/MySite.css">
-    <title>UserCenter</title>
+    <title>用户中心</title>
 </head>
 
 <body>
@@ -23,23 +23,23 @@
             </div>
             <div class="row" style="padding-top: 5%;">
                 <div id="BuyerInfo" class="col-md-3 offset-md-2 btn-square">
-                    <h1>个人资料</h1>
+                    <h3>个人资料</h3>
                 </div>
                 <div id="BuyerAddress" class="col-md-3 offset-md-2 btn-square">
-                    <h1>收货地址</h1>
+                    <h3>收货地址</h3>
                 </div>
             </div>
             <div class="row" style="padding-top: 5%;">
                 <div class="col-md-3 offset-md-2 btn-square">
-                    <h1>已派送订单</h1>
+                    <h3>已派送订单</h3>
                 </div>
                 <div class="col-md-3 offset-md-2 btn-square">
-                    <h1>未派送订单</h1>
+                    <h3>未派送订单</h3>
                 </div>
             </div>
             <div class="row" style="padding: 5% 0;">
                 <div id="shoppingcart" class="col-md-3 btn-square" style="margin-left: 37.5%;">
-                    <h1>购物车</h1>
+                    <h3>购物车</h3>
                 </div>
             </div>
         </div>
