--- a/UserCenter/BuyerInfo.html
+++ b/UserCenter/BuyerInfo.html
@@ -9,7 +9,7 @@
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" integrity="sha384-WskhaSGFgHYWDcbwN70/dfYBj47jz9qbsMId/iRN3ewGhXQFZCSftd1LZCfmhktB" crossorigin="anonymous">
     <link rel="stylesheet" type="text/css" href="../assets/css/MySite.css">
-    <title>Hello, world!</title>
+    <title>个人信息</title>
 </head>
 
 <body>
@@ -28,42 +28,42 @@
             <div class="row" style="padding-top: 15%;">
                 <div class="col-md-5 offset-md-5 info-list">
                     <div class="row">
-                        <div class="col-md-4">
-                            <h2>头像</h2>
+                        <div class="col-md-5">
+                            <h4>头像</h4>
                         </div>
-                        <div class="col-md-4 offset-md-4">
+                        <div class="col-md-5 offset-md-2">
                             <div class="icon"></div>
                         </div>
                     </div>
                     <div class="row">
-                        <div class="col-md-4">
-                            <h2>昵称</h2>
+                        <div class="col-md-5">
+                            <h4>昵称</h4>
                         </div>
-                        <div class="col-md-4 offset-md-4" style="text-align: right;">
-                            <h2>用户名</h2>
-                        </div>
-                    </div>
-                    <div class="row">
-                        <div class="col-md-4">
-                            <h2>性别</h2>
-                        </div>
-                        <div class="col-md-4 offset-md-4" style="text-align: right;">
-                            <h2>男 / 女</h2>
+                        <div class="col-md-5 offset-md-2" style="text-align: right;">
+                            <h4>用户名</h4>
                         </div>
                     </div>
                     <div class="row">
-                        <div class="col-md-4">
-                            <h2>联系方式</h2>
+                        <div class="col-md-5">
+                            <h4>性别</h4>
                         </div>
-                        <div class="col-md-4 offset-md-4" style="text-align: right;">
-                            <h2>**********</h2>
+                        <div class="col-md-5 offset-md-2" style="text-align: right;">
+                            <h4>男 / 女</h4>
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="col-md-5">
+                            <h4>联系方式</h4>
+                        </div>
+                        <div class="col-md-5 offset-md-2" style="text-align: right;">
+                            <h4>**********</h4>
                         </div>
                     </div>
                 </div>
             </div>
             <div class="row" style="padding: 5% 0 10% 0;">
                 <div class="col-md-3 offset-md-6 btn-round">
-                    <h1>修改信息</h1>
+                    <h3>修改信息</h3>
                 </div>
             </div>
         </div>
