--- a/UserCenter/BuyerCenter.html
+++ b/UserCenter/BuyerCenter.html
@@ -23,23 +23,23 @@
             </div>
             <div class="row" style="padding-top: 5%;">
                 <div id="BuyerInfo" class="col-md-3 offset-md-2 btn-square">
-                    <h1>个人资料</h1>
+                    <p class="choose">个人资料</p>
                 </div>
                 <div id="BuyerAddress" class="col-md-3 offset-md-2 btn-square">
-                    <h1>收货地址</h1>
+                    <p class="choose">收货地址</p>
                 </div>
             </div>
             <div class="row" style="padding-top: 5%;">
                 <div class="col-md-3 offset-md-2 btn-square">
-                    <h1>已派送订单</h1>
+                    <p class="choose">已派送订单</p>
                 </div>
                 <div class="col-md-3 offset-md-2 btn-square">
-                    <h1>未派送订单</h1>
+                    <p class="choose">未派送订单</p>
                 </div>
             </div>
             <div class="row" style="padding: 5% 0;">
                 <div id="shoppingcart" class="col-md-3 btn-square" style="margin-left: 37.5%;">
-                    <h1>购物车</h1>
+                    <p class="choose">购物车</p>
                 </div>
             </div>
         </div>
