--- a/login/register.html
+++ b/login/register.html
@@ -22,7 +22,7 @@
                 <img src="../Images/password_icon.png">
                 <input type="text" placeholder="密码">
             </div>
-            <div id="user_check">
+            <!-- <div id="user_check">
                 <div class="check" id="check_user">
                     <input type="checkbox">
                     <span>用户</span>
@@ -35,7 +35,7 @@
                     <input type="checkbox">
                     <span>负责人</span>
                 </div>
-            </div>
+            </div> -->
             <button type="button" id="register">注册</button>
         </div>
     </div>
