--- a/UserCenter/AddAddress.html
+++ b/UserCenter/AddAddress.html
@@ -7,25 +7,37 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
     <!-- Bootstrap CSS -->
-    <link rel="stylesheet" href="../css/MySite.css">
+    <link rel="stylesheet" href="../assets/css/MySite.css">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" integrity="sha384-WskhaSGFgHYWDcbwN70/dfYBj47jz9qbsMId/iRN3ewGhXQFZCSftd1LZCfmhktB" crossorigin="anonymous">
 
-    <title>Hello, world!</title>
+    <title>AddAddress</title>
 </head>
 
 <body>
     <div class="container body-content">
 
         <div class="bg" style="background-image: url(../Images/bg2.jpg)">
-            <div class="row" style="padding-bottom: 10%;">
+           <!--  <div class="row" style="padding-bottom: 10%;">
                 <div class="col-md-6 offset-md-1">
                     <ol class="breadcrumb">
                         <li><a href="#">主页</a></li>
+                        <img src="../Images/arrow.png">
                         <li><a href="#">个人中心</a></li>
+                        <img src="../Images/arrow.png">
                         <li><a href="#">收货地址</a></li>
+                        <img src="../Images/arrow.png">
                         <li class="active">添加新地址</li>
                     </ol>
                 </div>
+            </div> -->
+            <div id="addaddress_top">
+                <span>主页</span>
+                <img src="../Images/arrow.png">
+                <span>个人中心</span>
+                <img src="../Images/arrow.png">
+                <span>收货地址</span>
+                <img src="../Images/arrow.png">
+                <span>添加新地址</span>
             </div>
             <div class="row" style="padding-bottom: 25%;">
                 <div class="col-md-6 offset-md-1">
