--- a/UserCenter/BuyerAddress.html
+++ b/UserCenter/BuyerAddress.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" type="text/css" href="../assets/css/MySite.css">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" integrity="sha384-WskhaSGFgHYWDcbwN70/dfYBj47jz9qbsMId/iRN3ewGhXQFZCSftd1LZCfmhktB" crossorigin="anonymous">
 
-    <title>Hello, world!</title>
+    <title>收获地址</title>
 </head>
 
 <body>
