--- a/UserCenter/CellerCenter.html
+++ b/UserCenter/CellerCenter.html
@@ -8,8 +8,8 @@
 
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" integrity="sha384-WskhaSGFgHYWDcbwN70/dfYBj47jz9qbsMId/iRN3ewGhXQFZCSftd1LZCfmhktB" crossorigin="anonymous">
-    <link rel="stylesheet" type="text/css" href="../css/MySite.css">
-    <title>Hello, world!</title>
+    <link rel="stylesheet" type="text/css" href="../assets/css/MySite.css">
+    <title>CellerCenter</title>
 </head>
 
 <body>
@@ -24,18 +24,18 @@
             </div>
             <div class="row" style="padding-top: 5%;">
                 <div class="col-md-3 offset-md-2 btn-square">
-                    <h1>个人资料</h1>
+                    <p class="choose">个人资料</p>
                 </div>
                 <div class="col-md-3 offset-md-2 btn-square">
-                    <h1>商品查看</h1>
+                    <p class="choose">商品查看</p>
                 </div>
             </div>
             <div class="row" style="padding-top: 5%; padding-bottom: 15%;">
                 <div class="col-md-3 offset-md-2 btn-square">
-                    <h1>已派送订单</h1>
+                    <p class="choose">已派送订单</p>
                 </div>
                 <div class="col-md-3 offset-md-2 btn-square">
-                    <h1>未派送订单</h1>
+                    <p class="choose">未派送订单</p>
                 </div>
             </div>
         </div>
