--- a/UserCenter/BuyerInfo.html
+++ b/UserCenter/BuyerInfo.html
@@ -9,11 +9,7 @@
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" integrity="sha384-WskhaSGFgHYWDcbwN70/dfYBj47jz9qbsMId/iRN3ewGhXQFZCSftd1LZCfmhktB" crossorigin="anonymous">
     <link rel="stylesheet" type="text/css" href="../assets/css/MySite.css">
-<<<<<<< HEAD
     <title>BuyerInfo</title>
-=======
-    <title>个人信息</title>
->>>>>>> 2f0cdcfc3762486b570f17b0f8ef70b383f6e7e6
 </head>
 
 <body>
@@ -28,7 +24,7 @@
                         <li class="active">个人资料</li>
                     </ol> -->
                     <div id="buyerinfo_top">
-                        <span>主页</span>
+                        <span><a href="../index.html">主页</a></span>
                         <img src="../Images/arrow.png">
                         <span>个人资料</span>
                     </div>
@@ -36,49 +32,30 @@
             </div>
             <div class="row" style="padding-top: 5%;">
                 <div class="col-md-5 offset-md-5 info-list">
-<<<<<<< HEAD
                     <div class="row info">
                         <div class="col-md-4">
                             <h2>头像</h2>
-=======
-                    <div class="row">
-                        <div class="col-md-5">
-                            <h4>头像</h4>
->>>>>>> 2f0cdcfc3762486b570f17b0f8ef70b383f6e7e6
                         </div>
-                        <div class="col-md-5 offset-md-2">
+                        <div class="col-md-4 offset-md-4">
                             <div class="icon"></div>
                         </div>
                     </div>
-<<<<<<< HEAD
                     <div class="row info">
                         <div class="col-md-4">
                             <h2>昵称</h2>
-=======
-                    <div class="row">
-                        <div class="col-md-5">
-                            <h4>昵称</h4>
->>>>>>> 2f0cdcfc3762486b570f17b0f8ef70b383f6e7e6
                         </div>
-                        <div class="col-md-5 offset-md-2" style="text-align: right;">
-                            <h4>用户名</h4>
+                        <div class="col-md-4 offset-md-4" style="text-align: right;">
+                            <h2>用户名</h2>
                         </div>
                     </div>
-<<<<<<< HEAD
                     <div class="row info">
                         <div class="col-md-4">
                             <h2>性别</h2>
-=======
-                    <div class="row">
-                        <div class="col-md-5">
-                            <h4>性别</h4>
->>>>>>> 2f0cdcfc3762486b570f17b0f8ef70b383f6e7e6
                         </div>
-                        <div class="col-md-5 offset-md-2" style="text-align: right;">
-                            <h4>男 / 女</h4>
+                        <div class="col-md-4 offset-md-4" style="text-align: right;">
+                            <h2>男 / 女</h2>
                         </div>
                     </div>
-<<<<<<< HEAD
                     <div class="row info">
                         <div class="col-md-4">
                             <h2>邮箱</h2>
@@ -90,26 +67,15 @@
                     <div class="row info">
                         <div class="col-md-4">
                             <h2>联系方式</h2>
-=======
-                    <div class="row">
-                        <div class="col-md-5">
-                            <h4>联系方式</h4>
->>>>>>> 2f0cdcfc3762486b570f17b0f8ef70b383f6e7e6
                         </div>
-                        <div class="col-md-5 offset-md-2" style="text-align: right;">
-                            <h4>**********</h4>
+                        <div class="col-md-4 offset-md-4" style="text-align: right;">
+                            <h2>**********</h2>
                         </div>
                     </div>
                 </div>
             </div>
             <div class="row" style="padding: 5% 0 10% 0;">
-<<<<<<< HEAD
                 <button type="submit" class="btn btn-default offset-md-7">修改信息</button>
-=======
-                <div class="col-md-3 offset-md-6 btn-round">
-                    <h3>修改信息</h3>
-                </div>
->>>>>>> 2f0cdcfc3762486b570f17b0f8ef70b383f6e7e6
             </div>
         </div>
     </div>
