--- a/Orders/shoppintcart.html
+++ b/Orders/shoppintcart.html
@@ -6,6 +6,7 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>shopping cart</title>
+    <script src="../assets/js/vue.js"></script>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" integrity="sha384-WskhaSGFgHYWDcbwN70/dfYBj47jz9qbsMId/iRN3ewGhXQFZCSftd1LZCfmhktB" crossorigin="anonymous">
     <link rel="stylesheet" type="text/css" href="../assets/css/layout.css">
 
@@ -19,14 +20,14 @@
                 <img src="../Images/arrow.png">
                 <span id="usercenter">个人中心</span>
                 <img src="../Images/arrow.png">
-                <span id="shoppingcart">购物车</span>
+                <span>购物车</span>
             </div>
             <div id="shoppingcart_content">
                 <span id="notice">商品清单</span>
-                <div class="container">
-                    <div class="row card_cart">
+                <div class="container" id="shoppingcart">
+                    <div class="row card_cart" v-for='cart in carts'>
                         <div class="col-md-2 cart_img">
-                            <img src="../Images/fruit1.jpg">
+                            <img :src="cart.fruit.src">
                         </div>
                         <div class="col-md-8 cart_detail">
                             <div class="row cart_title">
@@ -36,83 +37,23 @@
                                 <span class="col-md-3 ">总计</span>
                             </div>
                             <div class="row cart_content">
-                                <span class="col-md-3 ">桑葚</span>
-                                <span class="col-md-3 ">24.5元/Kg</span>
-                                <span class="col-md-3 ">1</span>
-                                <span class="col-md-3 ">24.5元</span>
+                                <span class="col-md-3 ">{{cart.fruit.name}}</span>
+                                <span class="col-md-3 ">{{cart.fruit.price}}元/kg</span>
+                                <span class="col-md-3 ">{{cart.count}}</span>
+                                <span class="col-md-3 ">{{cart.fruit.price*cart.count}}元</span>
                             </div>
                         </div>
                         <div class="col-md-2 cart_delete">
-                            <div class="cart_deletediv">删除</div>
-                        </div>
-                    </div>
-                    <div class="row card_cart">
-                        <div class="col-md-2 cart_img">
-                            <img src="../Images/fruit1.jpg">
-                        </div>
-                        <div class="col-md-8 cart_detail">
-                            <div class="row cart_title">
-                                <span class="col-md-3 ">商品</span>
-                                <span class="col-md-3 ">单价</span>
-                                <span class="col-md-3 ">数量</span>
-                                <span class="col-md-3 ">总计</span>
-                            </div>
-                            <div class="row cart_content">
-                                <span class="col-md-3 ">桑葚</span>
-                                <span class="col-md-3 ">24.5元/Kg</span>
-                                <span class="col-md-3 ">1</span>
-                                <span class="col-md-3 ">24.5元</span>
-                            </div>
-                        </div>
-                        <div class="col-md-2 cart_delete">
-                            <div class="cart_deletediv">删除</div>
-                        </div>
-                    </div>
-                    <div class="row card_cart">
-                        <div class="col-md-2 cart_img">
-                            <img src="../Images/fruit1.jpg">
-                        </div>
-                        <div class="col-md-8 cart_detail">
-                            <div class="row cart_title">
-                                <span class="col-md-3 ">商品</span>
-                                <span class="col-md-3 ">单价</span>
-                                <span class="col-md-3 ">数量</span>
-                                <span class="col-md-3 ">总计</span>
-                            </div>
-                            <div class="row cart_content">
-                                <span class="col-md-3 ">桑葚</span>
-                                <span class="col-md-3 ">24.5元/Kg</span>
-                                <span class="col-md-3 ">1</span>
-                                <span class="col-md-3 ">24.5元</span>
-                            </div>
-                        </div>
-                        <div class="col-md-2 cart_delete">
-                            <div class="cart_deletediv">删除</div>
-                        </div>
-                    </div>
-                    <div class="row card_cart">
-                        <div class="col-md-2 cart_img">
-                            <img src="../Images/fruit1.jpg">
-                        </div>
-                        <div class="col-md-8 cart_detail">
-                            <div class="row cart_title">
-                                <span class="col-md-3 ">商品</span>
-                                <span class="col-md-3 ">单价</span>
-                                <span class="col-md-3 ">数量</span>
-                                <span class="col-md-3 ">总计</span>
-                            </div>
-                            <div class="row cart_content">
-                                <span class="col-md-3 ">桑葚</span>
-                                <span class="col-md-3 ">24.5元/Kg</span>
-                                <span class="col-md-3 ">1</span>
-                                <span class="col-md-3 ">24.5元</span>
-                            </div>
-                        </div>
-                        <div class="col-md-2 cart_delete">
-                            <div class="cart_deletediv">删除</div>
+                            <div class="cart_deletediv" @click="decart(cart)">删除</div>
                         </div>
                     </div>
                 </div>
+            </div>
+            <div id="cart_confirm" class="row">
+                <div class="col-md-7 ">&nbsp;</div>
+                <div class="col-md-2 " id="total">共：{{money}}元</div>
+                <div class="col-md-2 " id="confirm_pay">去付款</div>
+                <div class="col-md-1 ">&nbsp;</div>
             </div>
         </div>
     </div>
@@ -123,7 +64,7 @@
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js" integrity="sha384-smHYKdLADwkXOn1EmN1qk/HfnUcbVRZyYmZ4qpPea6sjB/pTJ0euyQp0Mk8ck+5T" crossorigin="anonymous"></script>
-    <script src="../assets/js/index.js"></script>
+    <script src="../assets/js/shoppingcart.js"></script>
 </body>
 
 </html>
