--- a/UserCenter/BuyerAddress.html
+++ b/UserCenter/BuyerAddress.html
@@ -10,23 +10,26 @@
     <link rel="stylesheet" type="text/css" href="../assets/css/MySite.css">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" integrity="sha384-WskhaSGFgHYWDcbwN70/dfYBj47jz9qbsMId/iRN3ewGhXQFZCSftd1LZCfmhktB" crossorigin="anonymous">
 
-<<<<<<< HEAD
-    <title>收获地址</title>
-=======
-    <title>地址管理</title>
->>>>>>> 2f0cdcfc3762486b570f17b0f8ef70b383f6e7e6
+    <title>BuyerAddress</title>
 </head>
 
 <body>
     <div class="container body-content">
-        <div class="bg" style="background-image: url(../Images/8.jpg)">
+        <div class="bg" id="buyeraddress" >
             <div class="row" style="padding-bottom: 5%;">
                 <div class="col-md-4 offset-md-1">
-                    <ol class="breadcrumb">
+                    <!-- <ol class="breadcrumb">
                         <li><a href="../index.html">主页</a></li>
                         <li><a href="../UserCenter/BuyerCenter.html">个人中心</a></li>
                         <li class="active">收货地址</li>
-                    </ol>
+                    </ol> -->
+                    <div id="buyeraddress_top">
+                        <span><a href="../index.html">主页</a></span>
+                        <img src="../Images/arrow.png">
+                        <span><a href="../UserCenter/BuyerCenter.html">个人中心</a></span>
+                        <img src="../Images/arrow.png">
+                        <span>收货地址</span>
+                    </div>
                 </div>
             </div>
             <div class="row">
@@ -51,7 +54,7 @@
                                         <span class="glyphicon glyphicon-check"></span>
                                     </div>
                                     <div class="col-sm-9">
-                                        <p style="font-size: 1em;">默认地址</p>
+                                        <p style="font-size: 18px;">默认地址</p>
                                     </div>
                                 </div>
                             </div>
@@ -61,7 +64,7 @@
                                         <span class="glyphicon glyphicon-pencil"></span>
                                     </div>
                                     <div class="col-sm-8">
-                                        <p style="font-size: 1em;">编辑</p>
+                                        <p style="font-size: 18px;">编辑</p>
                                     </div>
                                 </div>
                             </div>
@@ -71,7 +74,7 @@
                                         <span class="glyphicon glyphicon-trash"></span>
                                     </div>
                                     <div class="col-sm-8">
-                                        <p style="font-size: 1em;">删除</p>
+                                        <p style="font-size: 18px;">删除</p>
                                     </div>
                                 </div>
                             </div>
@@ -97,7 +100,7 @@
                                         <span class="glyphicon glyphicon-unchecked"></span>
                                     </div>
                                     <div class="col-sm-9">
-                                        <p style="font-size: 1em;">设为默认</p>
+                                        <p style="font-size: 18px;">设为默认</p>
                                     </div>
                                 </div>
                             </div>
@@ -107,7 +110,7 @@
                                         <span class="glyphicon glyphicon-pencil"></span>
                                     </div>
                                     <div class="col-sm-8">
-                                        <p style="font-size: 1em;">编辑</p>
+                                        <p style="font-size: 18px;">编辑</p>
                                     </div>
                                 </div>
                             </div>
@@ -117,13 +120,13 @@
                                         <span class="glyphicon glyphicon-trash"></span>
                                     </div>
                                     <div class="col-sm-8">
-                                        <p style="font-size: 1em;">删除</p>
+                                        <p style="font-size: 18px;">删除</p>
                                     </div>
                                 </div>
                             </div>
                         </div>
                     </div>
-                    <div class="row" style="padding: 5% 0 10% 0;">
+                    <div class="row" style="padding: 5% 0 20% 0;">
                         <div class="col-md-12 btn-round">
                             <h1>修改信息</h1>
                         </div>
